@@ -4,14 +4,11 @@ import com.leothenardo.homebroker.common.exceptions.ResourceNotFoundException;
 import com.leothenardo.homebroker.wallets.dtos.AssetOnWalletDTO;
 import com.leothenardo.homebroker.wallets.dtos.CreateWalletOutputDTO;
 import com.leothenardo.homebroker.wallets.infra.WalletRepository;
-import com.leothenardo.homebroker.wallets.model.AssetID;
-import com.leothenardo.homebroker.wallets.model.AssetOnWallet;
 import com.leothenardo.homebroker.wallets.model.Wallet;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,14 +28,12 @@ public class WalletService {
 
 	@Transactional(readOnly = true)
 	public List<AssetOnWalletDTO> listAssets(String walletId) {
-		Map<AssetID, AssetOnWallet> map = this.walletRepository.findById(walletId)
-						.map(Wallet::getEmbeddedAssets)
+		List<Wallet.Asset> assets = this.walletRepository.findById(walletId)
+						.map(Wallet::getAssets)
 						.orElseThrow(() -> new ResourceNotFoundException(walletId));
-		List<AssetOnWalletDTO> toList = map
-						.entrySet()
-						.stream()
-						.map(entry -> new AssetOnWalletDTO(entry.getKey().toString(), entry.getValue().getShares()))
-						.collect(Collectors.toList());
-		return toList;
+
+		return assets.stream().map(AssetOnWalletDTO::from).toList();
+
 	}
+
 }
